# cw-2025-spiral-like-drawings

./: CMakeLists.txt  README.md  spiral-like-drawings.cpp  Бабынина_Ирина_БПМ_22_1.txt.txt
